--- a/exercicios/desafio-cordel/cordel-estilos.css
+++ b/exercicios/desafio-cordel/cordel-estilos.css
@@ -31,9 +31,8 @@ header{
         text-align: center;
         font-size: 70px;
         padding-top: 50px;
-        
-        margin-left: auto;
-        margin-right: auto;
+        min-width: 200px;
+       
 
     }
     #headerh3{
@@ -51,7 +50,8 @@ header{
     
     p{
         text-align: justify;
-        width: 450px;
+        min-width: 150px;
+        max-width: 350px;
         margin: 0px;
         padding: 60px ;
         padding-left: 20px;
