--- a/exercicios/desafio-cordel/cordel-estilos.css
+++ b/exercicios/desafio-cordel/cordel-estilos.css
@@ -30,18 +30,16 @@ header{
         color: white;
         margin: 0px;
         text-align: center;
-        font-size: 70px;
+        font-size: 5vw;
         padding-top: 50px;
-        min-width: 100px;
-        max-width: 600px;
-       margin: auto;
+        
 
     }
     #headerh3{
         color: white;
         text-align: center;
         margin: 0px;
-        font-size: 30px;
+        font-size: 2.5vw;
         padding-bottom: 50px;
     }
     a{
@@ -52,8 +50,8 @@ header{
     
     p{
         text-align: justify;
-        min-width: 150px;
-        max-width: 350px;
+        max-width: 100vh;
+        
         margin: 0px;
         padding: 60px ;
         padding-left: 20px;
