--- a/estilo-grid768.css
+++ b/estilo-grid768.css
@@ -3,82 +3,97 @@
     padding: 0px;
     box-sizing: border-box;
 }
-@media screen and (min-width:480px) and (max-width:768px) {
+@media screen and (min-width:480px) and (max-width:769px) {
 
 body{
     background-color: rgb(138, 135, 135);
 }
-header{
+
+#container-do-menu{
+    position: absolute;
+    left: 90%;
+    top: 50%;
+    transform: translate(-90%, -50%);
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    
+    }
+    #container-do-menu > #icone-do-menu {
+        color: aliceblue;
+        width: 35px;
+        height:35px;
+    }
+    #check:checked ~ #nav-outheader{
+        margin-left: 75vw;
+        transition: 0.7s;
+        box-shadow: 1px 1px 6px 1px rgb(3, 39, 56);
+        
+    }
+
+header{
     height:70px;
-    background-color: rgba(34, 94, 122, 0.89);
+    background-color: rgb(34, 94, 122);
+    position: fixed;
+    box-shadow: 1px 1px 5px rgb(3, 39, 56);
     }
     #logoSite{
-    margin-left: 10%;
-    padding: 5px;
+    display: flex;
+    margin-left:10%;
+    
     }
-    #icone-menu{
-        display: flex;
-        flex-direction: row;
-        justify-items: flex-end;
-        margin-left: 55%;
-    }
+    
 nav{
-    margin-left: 10%;
-    display: none;
-    justify-content:flex-end;
-    align-items:center;
+    display:none;
     }
-    .links-container{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 70px;
-        column-gap: 5px;
-        }
-        .links{
-        display: flex;
-        align-items:center;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: bolder;
-        }
-        .links:hover{
-            background-color: rgb(23, 119, 114);
-            border-bottom-right-radius:60px;
-            border-top-left-radius:60px;
-            border-bottom-left-radius:60px;
-            box-shadow: 0px 0px 4px rgb(27, 9, 51);
-            transform:translateY(2px);
-            transition: 0.7s;
-            
-            }
-            a{
-                text-decoration: none;
-                color: rgb(201, 240, 240); 
-                padding: 8px               
-            }
-            .icones{
-                height: 20px;
-                width: 30px;
-                margin-right: 5px;
-            }
-#nav-redes-sociais{
-    display: none;
-    width: 250px;
-    justify-content: flex-end;
-    align-items: center;
-    column-gap: 5px;
-    }
-        .sizeIcons{
-            height: 15px;
-            width: 15px;
-        }
-/*main > div{
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr;
-    background-color: rgb(233, 182, 116);
-    gap: 15px;
-    margin-top: 20px;
-}*/
+#nav-outheader{
+    display: block;
+    height: 100%;
+    margin-left: 100vw;
+    transition: 0.7s;
+    
 }
-            
+                .links-container-outheader{
+                    position: fixed;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: center;
+                    row-gap: 15px;
+                    background-color: rgba(26, 122, 151, 0.945);
+                    margin-top: 70px;
+                    height: 100%;
+                    width: 35vw;
+                    
+                    }
+                    .links{
+                    display: flex;
+                    align-items:center;
+                    font-family: Arial, Helvetica, sans-serif;
+                    font-size: bolder;
+                    width: 100%;
+                    }
+                    .links:hover{
+                        
+                        
+                        box-shadow: 0px 0px 4px rgb(27, 9, 51);
+                        transform:translateY(2px);
+                        transition: 0.7s;
+                        
+                        }
+                        a{
+                            text-decoration: none;
+                            color: rgb(201, 240, 240); 
+                            padding: 8px               
+                        }
+                        .icones{
+                            height: 20px;
+                            width: 30px;
+                            margin-right: 5px;
+                        }
+
+}  
+                        
+          
