--- a/estilo-grid820.css
+++ b/estilo-grid820.css
@@ -3,7 +3,7 @@
     padding: 0px;
     box-sizing: border-box;
 }
-@media screen and (min-width:770px) and (max-width:821px){
+@media screen and (min-width:770px) and (max-width:890px){
 body{
     background-color: rgb(138, 135, 135);
 }
@@ -11,19 +11,21 @@ header{
     display: flex;
     height:70px;
     background-color: rgba(34, 94, 122, 0.89);
+    box-shadow: 1px 1px 5px rgb(3, 39, 56);
     }
     #logoSite{
-    margin-left: 5%;
-    padding: 5px;
+    display: flex;
+    margin-left: 3%;
     }
-    #icone-menu{
+    #icone-do-menu{
     display: none;
     }
 nav{
     margin-left: 7%;
     display: flex;
-    justify-content:flex-end;
+    justify-content:center;
     align-items:center;
+    width: 500px;
     }
     .links-container{
         display: flex;
@@ -36,22 +38,19 @@ nav{
         display: flex;
         align-items:center;
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 0.8em;
+        font-size: 0.9em;
         }
         .links:hover{
             background-color: rgb(23, 119, 114);
-            border-bottom-right-radius:60px;
-            border-top-left-radius:60px;
-            border-bottom-left-radius:60px;
+            border-radius: 15px;
             box-shadow: 0px 0px 4px rgb(27, 9, 51);
-            transform:translateY(2px);
+            transform:translateY(1px);
             transition: 0.7s;
-            
             }
             a{
                 text-decoration: none;
                 color: rgb(201, 240, 240); 
-                padding: 8px               
+                padding: 5px               
             }
             #quemSomos{
                 order:1;
@@ -66,20 +65,14 @@ nav{
             }
 #nav-redes-sociais{
     width: 100px;
-    margin-left: 11%;
-    justify-content: flex-end;
+    margin-left: 8%;
+    justify-content: center;
     align-items: center;
     column-gap: 5px;
+    width: 150px;
     }
         .sizeIcons{
             height: 15px;
             width: 15px;
         }
-/*main > div{
-    display: grid;
-    grid-template-columns:1fr 1fr 1fr;
-    background-color: rgb(233, 182, 116);
-    gap: 15px;
-    margin-top: 20px;
-}*/
 }
