--- a/exercicios/siteftech/estilo-grid1280.css
+++ b/exercicios/siteftech/estilo-grid1280.css
@@ -7,23 +7,24 @@
     
 
 body{
-    background-color: rgb(138, 135, 135);
-    height: 1500px;
+    background-color: rgb(255, 255, 255);
+    height: 2500px;
 }
 header{
-    width: 100vw;
-    position: fixed;
-    display: flex;
+    width: 98.7vw;
+    position: sticky;
+    top: 0px;
     height:70px;
-    background-color: rgba(34, 94, 122, 0.89);
+    z-index: 2;
+    background-color: rgb(37, 101, 130);
+    box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.53);
     }
     #logoSite{
     display: flex;
     margin-left: 10%;
-    
     }
     #icone-menu{
-        display: none;
+    display: none;
     }
 #icone-do-menu{
     display: none;
@@ -36,8 +37,6 @@ nav{
     display: flex;
     justify-content:center;
     align-items:center;
-   
-
     }
     .links-container{
         display: flex;
@@ -46,7 +45,6 @@ nav{
         height: 70px;
         column-gap: 10px;
         width: 500px;
-        
         }
         .links{
         display: flex;
@@ -58,7 +56,6 @@ nav{
             background-color: rgb(23, 119, 114);
             border-radius: 20px;
             box-shadow: 0px 0px 4px rgb(27, 9, 51);
-            transform:translateY(2px);
             transition: 0.7s;
             }
             a{
@@ -91,4 +88,31 @@ nav{
 #nav-outheader{
     display: none;
 }
+main{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 250px;
+    width: 900px;
+    height: 2200px;
+    
+    }
+    .mainContainerPrincipal{
+    display: flex;
+    column-gap: 25px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    z-index: 1;
+    height: 400px;
+    margin-top: 70px;
+    }
+        .conteudoPrincipal{
+        width: 350px;
+        height: 175px;
+        background-color: brown;
+        }   
+        
+        p{
+            background-color: transparent;
+        }
 }  
